--- a/src/gui/style.css
+++ b/src/gui/style.css
@@ -44,5 +44,8 @@ input[type="button"] {
   display: flex;
   align-items: center;
   justify-content: center;
-}
 
+}
+.center svg{
+  padding-left: 1em;
+}
