--- a/src/gui/style.css
+++ b/src/gui/style.css
@@ -3,24 +3,32 @@
   flex-direction: row;
   align-items: center;
   height: 3em;
+  font-family: "Modern", "Noto Sans CJK TC", "Microsoft JhengHei", PingFang, STHeiti, sans-serif, serif;
+
 }
-.titleview *{
-    padding-left: 1em;
+
+.titleview * {
+  padding-left: 1em;
+
 }
 
 .listbox {
   display: flex;
   flex-direction: column;
   padding: 0.5em;
-  border: 1px rgb(110, 132, 211) solid;
+  border: 1px #182da7e8 solid;
   border-radius: 0.5em;
+  background-color: rgba(240, 248, 255, 0.51);
+
 }
+
 .listbox div {
   display: flex;
   flex-direction: row;
   align-items: center;
   padding-right: 1em;
 }
+
 .listbox a,
 .listbox input {
   flex-grow: 1;
@@ -29,23 +37,40 @@
   height: 2em;
   width: max-content;
 }
+
 .listbox div:hover {
-  background-color: rgb(211, 211, 211);
+  background-color: rgb(180, 180, 180);
 }
+
 input[type="button"] {
-    height: 2em;
-    width: 6em;
-    border-radius: 0.5em;
-    border: 1px rgb(110, 132, 211) solid;
-    background-color: rgb(183, 207, 251);
+  height: 2.4em;
+  width: 6em;
+  border-radius: 0.7em;
+  border: 1px rgb(8, 41, 157) solid;
+  background-color: #0e1a61ba;
+  font-family:"Noto Sans CJK TC", "Microsoft JhengHei", PingFang, STHeiti, sans-serif, serif;
+
 }
- 
+
 .center {
   display: flex;
   align-items: center;
-  justify-content: center;
+  font-family: "Century","Noto Sans CJK TC", "Microsoft JhengHei", PingFang, STHeiti, sans-serif, serif;
+}
+
+.center svg {
+  padding-left: 1em;
+  margin-top: -8px;
 
 }
-.center svg{
-  padding-left: 1em;
+
+body {
+  background-image: url('https://i.postimg.cc/900xL5w9/pexels-dominika-roseclay-1036808.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.122);
+  background-blend-mode: multiply;
+
 }
