--- a/src/gui/style.css
+++ b/src/gui/style.css
@@ -27,7 +27,7 @@
   flex-direction: row;
   align-items: center;
   padding-right: 1em;
- 
+
 }
 
 .listbox a,
@@ -50,32 +50,30 @@ input[type="button"] {
   border-radius: 0.7em;
   border: 1px rgb(8, 41, 157) solid;
   background-color: #0e1a61ba;
-  font-family:"Noto Sans CJK TC", "Microsoft JhengHei", PingFang, STHeiti, sans-serif, serif;
+  font-family: "Noto Sans CJK TC", "Microsoft JhengHei", PingFang, STHeiti, sans-serif, serif;
 
 }
 
 .center {
   display: flex;
   align-items: center;
-  font-family: "Century","Noto Sans CJK TC", "Microsoft JhengHei", PingFang, STHeiti, sans-serif, serif;
- 
+  font-family: "Century", "Noto Sans CJK TC", "Microsoft JhengHei", PingFang, STHeiti, sans-serif, serif;
+
 }
 
 .center svg {
   padding-left: 1em;
-  margin-top: -8px; 
+  margin-top: -8px;
 
 }
 
-body{
-  background-image: url('https://i.postimg.cc/900xL5w9/pexels-dominika-roseclay-1036808.jpg');
-  
+body {
+  background-image: url('https://images.pexels.com/photos/238118/pexels-photo-238118.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
   background-color: rgba(0, 0, 0, 0.122);
-   
+
   background-blend-mode: multiply;
 }
-
