--- a/src/gui/style.css
+++ b/src/gui/style.css
@@ -19,6 +19,16 @@
   background-color: rgba(240, 248, 255, 0.51);
 }
 
+.listbox_2col {
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+  align-items: center;
+}
+.listbox_2col a {
+  padding-right: 1em;
+}
+
 .listbox div {
   display: flex;
   flex-direction: row;
