--- a/src/gui/style.css
+++ b/src/gui/style.css
@@ -2,10 +2,13 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  line-height: 3em;
   height: 3em;
 }
 
 .titleView * {
+  font-size: 1.2em;
+  line-height: 2em;
   padding-left: 1em;
 }
 
@@ -13,22 +16,22 @@
   display: flex;
   flex-direction: column;
   padding: 0.5em;
-  border: 1px #182da7e8 solid;
   border-radius: 0.5em;
-  background-color: rgba(240, 248, 255, 0.51);
+  background-color: rgb(49, 49, 49);
+  box-shadow: black 0px 0px 8px 0px;
 }
-
 
 .listBox {
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 0.2em 1em;
+  border-radius: 0.5em;
 }
 
 .listBox a,
 .listBox input,
-.listBox p {
+.listBox label {
   flex-grow: 1;
   text-align: center;
   line-height: 2em;
@@ -36,17 +39,39 @@
   width: max-content;
 }
 
+.listBox svg {
+  padding: 0em 1em;
+}
+
 .listBox:hover {
-  background-color: rgba(0, 0, 0, 0.256);
-  backdrop-filter: blur(4px);
+  background-color: rgba(0, 0, 0, 0.387);
+
+}
+
+.dynText {
+  min-width: 2em;
+  height: 2em;
+}
+
+.dynText:hover {
+  font-weight: bold;
+}
+
+.dynTextInput {
+  line-height: 2em;
+  height: 2em;
 }
 
 input[type="button"] {
   height: 2.4em;
   width: 6em;
   border-radius: 0.7em;
-  border: 1px rgb(8, 41, 157) solid;
+  border: none;
   background-color: #0e1a61ba;
+}
+
+input[type="button"]:hover {
+  background-color: #323d7cba;
 }
 
 .center {
@@ -55,16 +80,21 @@ input[type="button"] {
 }
 
 #title svg {
+  font-size: 2em;
   padding-left: 1em;
   margin-top: -8px;
 }
 
+svg {
+  fill: rgb(174, 174, 174);
+  filter: drop-shadow(0px 0px 2px black);
+}
+
+svg:hover {
+  fill: white;
+}
+
 body {
-  background-image: url('https://images.pexels.com/photos/238118/pexels-photo-238118.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  background-color: rgba(0, 0, 0, 0.256);
-  background-blend-mode: multiply;
+  background-color: rgb(32, 32, 32);
+  color: white;
 }
